--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
     "@tailwindcss/vite": "^4.1.14",
+    "dompurify": "^3.3.0",
     "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
